--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 
     <title>Image Rendering</title>
 <body>
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="jquery-3.2.1.slim.min.js"></script>
+    <script src="popper.min.js"></script>
+    <script src="bootstrap.min.js"></script>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -21,21 +21,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-100 w-100" src="images/images01.jpg" alt="First slide">
+        <img class="d-100 w-100" src="images01.jpg" alt="First slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-100 w-100" style="width:768;height:1024" src="images/images02.jpg" alt="Second slide">
+        <img class="d-100 w-100" src="images02.jpg" alt="Second slide">
         <div class="carousel-caption d-none d-md-block">
             <h5>Second slide</h5>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-100 w-100" style="width:768;height:1024" src="images/images03.jpg" alt="Third slide">
+        <img class="d-100 w-100" src="images03.jpg" alt="Third slide">
         <div class="carousel-caption d-none d-md-block">
             <h5>Third slide</h5>
             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
